--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/View/Base.lproj/BTWithdrawRecordCell.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Assets/View/Base.lproj/BTWithdrawRecordCell.xib
@@ -16,8 +16,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="104"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="普通提币" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6qp-Iu-yeE">
-                        <rect key="frame" x="12" y="23" width="57.5" height="14"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6qp-Iu-yeE">
+                        <rect key="frame" x="12" y="23" width="0.0" height="14"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="14" id="qKX-Tg-nfA"/>
                         </constraints>
