--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Home/View/Base.lproj/BTPayPasswordPopView.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Home/View/Base.lproj/BTPayPasswordPopView.xib
@@ -25,8 +25,8 @@
                             <color key="textColor" red="0.20000000000000001" green="0.20000000000000001" blue="0.20000000000000001" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您未设置支付密码，请先设置支付密码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOQ-Bl-1iH">
-                            <rect key="frame" x="43.5" y="83" width="243" height="17"/>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="您未设置支付密码，请先设置支付密码" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vOQ-Bl-1iH">
+                            <rect key="frame" x="15" y="83" width="300" height="17"/>
                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                             <color key="textColor" red="0.01176470588" green="0.01176470588" blue="0.019607843140000001" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
@@ -53,8 +53,10 @@
                     <constraints>
                         <constraint firstItem="vOQ-Bl-1iH" firstAttribute="centerX" secondItem="tEa-7k-5gL" secondAttribute="centerX" id="36u-4a-kHy"/>
                         <constraint firstItem="tEa-7k-5gL" firstAttribute="centerX" secondItem="8X6-VL-cjU" secondAttribute="centerX" id="6tE-MY-dwX"/>
+                        <constraint firstAttribute="trailing" secondItem="vOQ-Bl-1iH" secondAttribute="trailing" constant="15" id="Dnz-gr-dUN"/>
                         <constraint firstItem="vOQ-Bl-1iH" firstAttribute="top" secondItem="tEa-7k-5gL" secondAttribute="bottom" constant="45" id="FxM-Zd-6s6"/>
                         <constraint firstAttribute="bottom" secondItem="ZHa-hA-Qn3" secondAttribute="bottom" constant="15" id="NiP-Wy-eMm"/>
+                        <constraint firstItem="vOQ-Bl-1iH" firstAttribute="leading" secondItem="8X6-VL-cjU" secondAttribute="leading" constant="15" id="PvA-3z-ajb"/>
                         <constraint firstItem="ZHa-hA-Qn3" firstAttribute="top" secondItem="vOQ-Bl-1iH" secondAttribute="bottom" constant="55" id="VO5-xj-VxO"/>
                         <constraint firstItem="ZHa-hA-Qn3" firstAttribute="centerX" secondItem="tEa-7k-5gL" secondAttribute="centerX" id="cgV-LT-3ep"/>
                         <constraint firstItem="tEa-7k-5gL" firstAttribute="top" secondItem="8X6-VL-cjU" secondAttribute="top" constant="23" id="eay-6s-G6q"/>
