--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Register/Base.lproj/BTBackupMnemonicsVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Register/Base.lproj/BTBackupMnemonicsVC.xib
@@ -77,7 +77,6 @@
                         </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rHx-Sj-LZF">
                             <rect key="frame" x="48" y="332" width="318" height="44"/>
-                            <color key="backgroundColor" red="0.85490196080000003" green="0.76862745099999996" blue="0.61568627450000002" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="44" id="Xn7-aP-I8L"/>
                             </constraints>
@@ -88,6 +87,15 @@
                             <userDefinedRuntimeAttributes>
                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                     <real key="value" value="9"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="gradientStyleEnum">
+                                    <integer key="value" value="2"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="gradientAColor">
+                                    <color key="value" red="0.85490196080000003" green="0.76862745099999996" blue="0.61568627450000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="color" keyPath="gradientBColor">
+                                    <color key="value" red="0.81960784310000001" green="0.6588235294" blue="0.43921568630000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                             <connections>
