--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Home/BTDropRecordViewController.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Home/BTDropRecordViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -14,6 +14,7 @@
                 <outlet property="coinTop" destination="7Yp-1g-xbT" id="4iD-cB-q0O"/>
                 <outlet property="coinTopEarning" destination="0L8-We-Wlk" id="lhL-VI-OGB"/>
                 <outlet property="tableView" destination="YCc-BM-oIm" id="fUF-cA-Kg8"/>
+                <outlet property="totalEarnings" destination="l49-cZ-4co" id="7EF-Zf-bIe"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
