--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/Base.lproj/BTImportWalletVC.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Profile/WalletManager/Base.lproj/BTImportWalletVC.xib
@@ -284,6 +284,9 @@
                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                     <real key="value" value="9"/>
                                 </userDefinedRuntimeAttribute>
+                                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                    <real key="value" value="0.0"/>
+                                </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
                             <connections>
                                 <action selector="importAction:" destination="-1" eventType="touchUpInside" id="mS1-Z3-F0G"/>
