--- a/Utbk_iOS/Utbk_iOS/ViewControllers/Trading/viewController/TradeViewController.xib
+++ b/Utbk_iOS/Utbk_iOS/ViewControllers/Trading/viewController/TradeViewController.xib
@@ -21,10 +21,12 @@
                 <outlet property="asktableView" destination="d1I-6T-QtU" id="s0N-kX-Wqk"/>
                 <outlet property="bidtableView" destination="ODp-rt-h67" id="g55-Xv-8HV"/>
                 <outlet property="buyBtn" destination="f87-XQ-5TO" id="BeV-XM-z9m"/>
+                <outlet property="buyLabel" destination="wXj-Ag-K3T" id="ajZ-QO-n2e"/>
                 <outlet property="entrustmentHisBut" destination="jOZ-uv-YaV" id="rtU-8L-nyZ"/>
                 <outlet property="entrusttableView" destination="SoD-mQ-d3S" id="WCN-Qe-LKI"/>
                 <outlet property="heightConstant" destination="Bz2-8R-FUz" id="8No-d5-oee"/>
                 <outlet property="kLineBtn" destination="0Zs-as-uvs" id="e7R-q2-4iJ"/>
+                <outlet property="limitLabel" destination="msh-vq-Qmh" id="WPi-3R-rfT"/>
                 <outlet property="logBtn" destination="oJQ-Vy-mTx" id="832-dR-l1H"/>
                 <outlet property="mainview" destination="7eR-Ju-kAR" id="eAm-Y4-5dP"/>
                 <outlet property="moreBtn" destination="yzz-jX-Aex" id="1qn-bV-e1k"/>
@@ -33,6 +35,7 @@
                 <outlet property="nowPrice" destination="hcn-A4-tet" id="xrB-Xr-BCb"/>
                 <outlet property="pricelabel" destination="MLN-DM-OEP" id="QfJ-yM-m8v"/>
                 <outlet property="sellBtn" destination="mwP-s6-I90" id="z2C-o2-sVx"/>
+                <outlet property="sellLabel" destination="RYO-7T-b3P" id="QgI-6h-9YC"/>
                 <outlet property="symbolBtn" destination="3pb-CJ-38l" id="67d-8r-SEd"/>
                 <outlet property="titleview" destination="tOj-h0-QBA" id="R9y-Xr-hql"/>
                 <outlet property="topDistance" destination="rRt-g3-wBT" id="hKb-9T-4i5"/>
